# beautiful

./: CMakeLists.txt  README.md  beutiful.cpp
src/: beautiful_numbers.hpp
test/: CMakeLists.txt  test_bruteforce.cpp
